--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool, huh?</p>
-<a href="https://google.com" target="_blank" title="Let's go the the search engine">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>Test Page</title>
+    </head>
+    <body>
+    <h1>Hey. I'm a big heading</h1>
+    <p>Hey. I'm a <b>paragraph</b> element. Cool, huh?</p>
+    <a href="https://google.com" target="_blank" title="Let's go the the search engine">Click me! I'm a link!</a>
+    <p>You may call me, <br>
+        Excalibur!</p>
+    <img src="https://doy2mn9upadnk.cloudfront.net/uploads/default/original/4X/0/9/f/09fd2b91fc84e0c8c067d124ef47ea9313086fa0.jpeg" alt="">
+</body>
+</html>
